Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,10 +6,10 @@ parameters:
   - name: environment
     displayName: "Select the Environment"
     type: string
-    default: dev
+    default: Dev
     values:
-      - dev
-      - prod
+      - Dev
+      - Prod
 
 ############################
 # STAGE 1: PRE-COMMIT
